# rpcnet

./: .gitignore  .release.toml  CHANGELOG.md  CLUSTER_DESIGN.md  CLUSTER_DESIGN_V2.md  CLUSTER_IMPLEMENTATION_TASKS.md  CRITICAL_FIXES_PROGRESS.md  CRITICAL_REVIEW.md  CRITICAL_REVIEW_ROUND_2.md  Cargo.toml  DEVELOPER.md  DEVELOPMENT.md  FIXES_SUMMARY.md  IMPLEMENTATION_ROADMAP.md  LAYER_2_COMPLETE.md  LAYER_2_FINAL_STATUS.md  LAYER_2_PROGRESS.md  LAYER_3_COMPLETE.md  LICENSE-APACHE  LICENSE-MIT  MIGRATION_REMOVAL_PLAN.md  Makefile  PUBLISH.md  README.md  RELEASE.md  ROUND_2_FIXES_COMPLETE.md  TESTING.md  cliff.toml  coverage-config.toml  llvm-coverage.lcov  rustfmt.toml  tarpaulin-report.html  tarpaulin.toml
.github/workflows/: README.md  coverage.yml  mdbook.yml  pr-checks.yml  release-pr.yml  release.yml
benches/: migration_benchmarks.rs  simple.rs  streaming.rs
certs/: test_cert.pem  test_key.pem
docs/: MIGRATION.md  RELEASING.md  RFC-001-dual-port-connection-migration.md
docs/mdbook/: book.toml
docs/mdbook/book/: 404.html  cluster-example.html  concepts.html  connection-swapping.html  getting-started.html  index.html  introduction.html  print.html  rpcnet-gen.html  searchindex.js  streaming-example.html  streaming-overview.html  toc.html  toc.js
docs/mdbook/book/advanced/: migration.html  performance.html  production.html
docs/mdbook/book/cluster/: discovery.html  failures.html  health.html  load-balancing.html  overview.html  pooling.html  tutorial.html
docs/mdbook/book/reference/: api.html  examples.html
docs/mdbook/src/: SUMMARY.md  cluster-example.md  concepts.md  connection-swapping.md  getting-started.md  introduction.md  rpcnet-gen.md  streaming-example.md  streaming-overview.md
docs/mdbook/src/advanced/: migration.md  performance.md  production.md
docs/mdbook/src/cluster/: discovery.md  failures.md  health.md  load-balancing.md  overview.md  pooling.md  tutorial.md
docs/mdbook/src/reference/: api.md  examples.md
docs/rfcs/: 000X-batched-and-streaming-ml-serving.md
examples/: basic_client.rs  basic_server.rs  simple_echo_client.rs  simple_echo_server.rs
examples/basic_greeting/: client.rs  greeting.rpc.rs  server.rs
examples/basic_greeting/greeting/greeting/: types.rs
examples/calculator/: calculator.rpc.rs  client.rs  server.rs
examples/cluster/: Cargo.toml  IMPLEMENTATION_STATUS.md  MIGRATION_PLAN.md  README.md  director_registry.rpc.rs  inference.rpc.rs  run_cluster_with_logging.sh  stop_cluster.sh  test_cluster.sh  test_connection_cleanup.sh
examples/cluster/src/: client.rs  director.rs  lib.rs  worker.rs
examples/concurrent_demo/: client.rs  concurrent_demo.rpc.rs  server.rs
examples/connection_swap/: COMPLETE.md  Cargo.toml  ENVIRONMENT_VARIABLES.md  IMPLEMENTED.md  QUICKSTART.md  README.md  director_registry.rpc.rs  inference.rpc.rs  run_demo.sh  simple_demo.rs
examples/connection_swap/src/: protocol.rs
examples/echo/: client.rs  echo.rpc.rs  server.rs
examples/file_transfer/: client.rs  file_transfer.rpc.rs  server.rs
rfcs/: 0001-service-definition-codegen.md  0003-simplified-codegen-implementation.md
scripts/: analyze-coverage.sh  check-coverage.sh  prepare-release.sh  report-gaps.sh  simulate_network_latency.sh
src/: client.rs  config.rs  connection.rs  errors.rs  file.rs  handler.rs  lib.rs  network.rs  request.rs  response.rs  rpcnet.rs  server.rs  streaming.rs
src/cluster/: client.rs  connection_pool.rs  events.rs  health_checker.rs  incarnation.rs  membership.rs  mod.rs  node_registry.rs  partition_detector.rs  worker_registry.rs
src/cluster/connection_pool/: config.rs  error.rs
src/cluster/failure_detection/: mod.rs  phi_accrual.rs
src/cluster/gossip/: config.rs  message.rs  mod.rs  protocol.rs  queue.rs  swim.rs
src/codegen/: generator.rs  mod.rs  parser.rs
src/migration/: health.rs  migration_service_impl.rs  mod.rs  models.rs  request_handler.rs  services.rs  session_manager.rs  state_machine.rs  state_transfer.rs  types.rs
src/migration/auth/: mod.rs  token_manager.rs
src/migration/models/: connection_session.rs  connection_state_snapshot.rs  migration_confirmation.rs  migration_request.rs  migration_token.rs
src/migration/state/: encryption.rs  mod.rs  serialization.rs
src/queues/: listener.rs  mod.rs  multiplex.rs  receiver.rs  sender.rs
src/rpc/: api.rs  dispatcher.rs  handler.rs  incoming.rs  listener.rs  mod.rs  multiplex.rs  outgoing.rs  request.rs  response.rs  server.rs  status.rs
src/transport/: message.rs  tcp.rs
tests/: bidirectional_streaming_coverage_tests.rs  client_method_unit_tests.rs  client_streaming_coverage_tests.rs  cluster_integration.rs  codegen_tests.rs  core_error_tests.rs  create_request_stream_tests.rs  drive_connection_real_coverage.rs  drive_connection_tests.rs  end_to_end_generated.rs  error_coverage_tests.rs  error_scenarios.rs  exact_coverage_lines_test.rs  integration_tests.rs  minimal_streaming_test.rs  parser_validation_tests.rs  parser_validation_tests.rs.disabled  real_streaming_integration_tests.rs  security_edge_cases.rs  server_start_response_tests.rs  simple_create_request_stream_test.rs  simple_streaming_tests.rs  simple_unit_tests.rs  start_method_internal_paths_tests.rs  start_method_natural_ok_return_test.rs  start_method_unit_tests.rs  streaming_coverage_tests.rs  streaming_internals_tests.rs  streaming_tests.rs  streaming_tests_broken.rs.bak  surgical_line_1426_test.rs  unit_coverage_tests.rs  unit_tests.rs
tests/contract/: test_connection_service.rs  test_health_service.rs  test_migration_service.rs  test_server_config_service.rs
