[package]
name = "rpcnet"
version = "0.1.0"
edition = "2021"

[features]
default = []
tracing = ["rmpv"]

[dependencies]
async-stream = "0.3.5"
async-trait = "0.1.71"
byteorder = "1.4.3"
bytes = "1.6.0"
futures-util = "0.3.30"
log = "0.4.19"
quinn = {  version = "0.11.0" , features = ["runtime-tokio", "rustls"]}
rcgen = "0.13.1"
rmp-serde = "1.1.1"
rmpv = {version="1.0.0", optional=true}
rustls = {  version = "0.23.7" }
serde = "1.0.165"
serde_derive = "1.0"
tokio = { version = "1.29.1", features = ["full", "tracing"] }
tokio-rustls = "0.26.0"
tokio-stream = "0.1.14"
tokio-util = { version = "0.7.11", features = ["codec"] }

[build]
rustflags = ["--cfg", "tokio_unstable"]

[[bin]]
name = "rpcnet"
path = "src/lib.rs"

[dev-dependencies]
# console-subscriber = "0.1.10"
