[package]
name = "rpcnet"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "1.3.3"
bytes = "1.9.0"
quiche = "0.22.0"
rand = "0.8.5"
ring = "0.17.12"
s2n-quic = "1.52.0"
serde = { version = "1.0.217", features = ["derive"]}
thiserror = "2.0.10"
tokio = { version = "1.43.0", features = ["full"]}

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "simple"
harness = false