[package]
name = "cluster-example"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "director"
path = "src/director.rs"

[[bin]]
name = "worker"
path = "src/worker.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
rpcnet = { path = "../.." }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
s2n-quic = "1.52.0"
uuid = { version = "1.0", features = ["v4"] }
futures = "0.3"
async-stream = "0.3"
async-trait = "0.1"
rand = "0.8"
tokio-stream = "0.1"
