[package]
name = "connection_swap"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "director"
path = "src/bin/director.rs"

[[bin]]
name = "worker"
path = "src/bin/worker.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
rpcnet = { path = "../.." }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
futures = "0.3"
bincode = "1"
async-stream = "0.3"
rand = "0.8"
